--- a/Draw/Controller/Common/InputDialog~iPad.xib
+++ b/Draw/Controller/Common/InputDialog~iPad.xib
@@ -2,7 +2,7 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.SystemVersion">11D50d</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
 		<string key="IBDocument.AppKitVersion">1138.32</string>
 		<string key="IBDocument.HIToolboxVersion">568.00</string>
@@ -46,7 +46,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{580, 360}</string>
 								<reference key="NSSuperview" ref="333513186"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="234513094"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -58,9 +57,8 @@
 							<object class="IBUIButton" id="234513094">
 								<reference key="NSNextResponder" ref="333513186"/>
 								<int key="NSvFlags">306</int>
-								<string key="NSFrame">{{100, 14}, {380, 82}}</string>
+								<string key="NSFrame">{{100, 28}, {380, 82}}</string>
 								<reference key="NSSuperview" ref="333513186"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="456264005"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -92,7 +90,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{40, 134}, {500, 70}}</string>
 								<reference key="NSSuperview" ref="333513186"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="9876403"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="155926539">
 									<int key="NSColorSpace">3</int>
@@ -133,7 +130,6 @@
 								<int key="NSvFlags">286</int>
 								<string key="NSFrame">{{46, 234}, {166, 82}}</string>
 								<reference key="NSSuperview" ref="333513186"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="302660390"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -158,7 +154,6 @@
 								<int key="NSvFlags">283</int>
 								<string key="NSFrame">{{366, 234}, {166, 82}}</string>
 								<reference key="NSSuperview" ref="333513186"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -173,7 +168,6 @@
 						</array>
 						<string key="NSFrame">{{94, 40}, {580, 360}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="364712453"/>
 						<reference key="IBUIBackgroundColor" ref="155926539"/>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -181,7 +175,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="333513186"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -356,66 +349,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">20</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">InputDialog</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCancelButton:">id</string>
-						<string key="clickOkButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCancelButton:">
-							<string key="name">clickCancelButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickOkButton:">
-							<string key="name">clickOkButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgView">UIImageView</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="contentView">UIView</string>
-						<string key="okButton">UIButton</string>
-						<string key="targetTextField">UITextField</string>
-						<string key="titleLabel">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgView">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contentView">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="okButton">
-							<string key="name">okButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetTextField">
-							<string key="name">targetTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/InputDialog.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
